Fixed cluster joining

--- a/my.cnf
+++ b/my.cnf
@@ -19,6 +19,8 @@ query_cache_type         = 0
 # WSREP
 ##################################################
 
+wsrep_on=ON
+
 # Path to Galera plugin library
 wsrep_provider           = /usr/lib/galera/libgalera_smm.so
 
@@ -33,6 +35,6 @@ wsrep_sst_method         = rsync
 # This options should could be set as a
 #
 #wsrep_cluster_address    = "gcomm://"
-#wsrep_cluster_name       = "the_cluster"
+wsrep_cluster_name       = "galera-cluster"
 
 !includedir /etc/mysql/conf.d/
